--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,4 +116,13 @@
         android:layout_alignRight="@+id/editText_user"
         android:layout_alignEnd="@+id/editText_user" />
 
+    <TextView
+        android:text="info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView_attempt1"
+        android:layout_toRightOf="@+id/button_signup"
+        android:layout_toEndOf="@+id/button_signup"
+        android:id="@+id/info" />
+
 </RelativeLayout>
